@@ -13,6 +13,7 @@ Bug fixes:
 - the document portlet and the subfolders in the main content area were
   displayed along with the portal forms.
 - #1073: made getImgTag more robust.
+- fix: #628: need an action to remove a translation
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Less restrictive permission check to allow
